--- a/.cvsignore
+++ b/.cvsignore
@@ -1,6 +1,8 @@
 config.cache
 config.log
 config.status
+linux.system.cache
+linux.system.cache.tmp
 linux-gnu.system.cache
 linux-gnu.system.cache.tmp
 makeopts
