M compiles and links under Linux (new code not tested yet though)

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@
 
 CWD = src
 SUB_DIRS = util classes gui mail adb
-MOBJS=util/*.o classes/*.o gui/*.o  mail/*.o adb/*.o
+MOBJS=util/*.o classes/*.o gui/*.o  mail/*.o adb/*.o \
+      wx/common/*.o wx/generic/*.o
 
 include ../makeopts
 
