added "wx" to the lit of directories

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 #
 
 CWD = src
-SUB_DIRS = util classes gui mail adb
+SUB_DIRS = util classes gui mail adb wx
 MOBJS=util/*.o classes/*.o gui/*.o  mail/*.o adb/*.o \
       wx/common/*.o wx/generic/*.o
 
