--- a/src/Python/Makefile2
+++ b/src/Python/Makefile2
@@ -9,15 +9,16 @@
 
 CWD = Python
 
-SWIGSRC = MAppBase.i MailFolder.i String.i Profile.i Message.i MObject.i
+SWIGSRC = MAppBase.i MailFolder.i MString.i Profile.i Message.i MObject.i
 CPPSRC = InitPython.cpp PythonHelp.cpp
 SRC=$(CXXSRC) *.cpp
 
 CPPTARGETS = $(SWIGSRC:.i=.cpp) swiglib.cpp
+PYTARGETS = $(SWIGSRC:.i=.py)
 OBJECTS    = $(CPPTARGETS:.cpp=.o) $(CPPSRC:.cpp=.o)
 
 
-all:	$(OBJECTS)
+all:	$(OBJECTS) $(PYTARGETS)
 
 .PHONY: mkswig all
 
@@ -41,7 +42,7 @@ install:
 	$(INSTALL_DATA) *.py $(DATADIR)/scripts
 	$(INSTALL_DATA) Scripts/*.py $(DATADIR)/scripts
 	$(INSTALL) -d $(DOCDIR)/Python
-	$(INSTALL_DATA) *.doc *.html $(DOCDIR)/Python
+	$(INSTALL_DATA) *.html $(DOCDIR)/Python
 
 #%.py: %.i
 #	$(SWIG) $(SWIGFLAGS) $<
