--- a/src/Python/.cvsignore
+++ b/src/Python/.cvsignore
@@ -9,3 +9,9 @@ String_wrap.doc
 MObject.cpp
 Message_wrap.doc
 MObject_wrap.doc
+MObject_swig.cpp
+String_swig.cpp
+Profile_swig.cpp
+Message_swig.cpp
+MailFolder_swig.cpp
+MAppBase_swig.cpp
