added new files to makefiles, couple of minor warnings fixed

--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -3,7 +3,8 @@
 CWD = gui
 SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp  \
-wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp
+wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp \
+wxFolderTree.cpp
 
 ifdef USE_WXTAB
 SRC += wxtab.cpp
