--- a/makeopts.in
+++ b/makeopts.in
@@ -68,7 +68,7 @@ BINDIR = @bindir@
 # Directory in which to install library files.
 DATADIR = @datadir@/M
 # where to install docs
-DOCDIR = @datadir@/M/doc
+DOCDIR = @datadir@/doc
 
 # for the dynamic linker, better than using -rpath
 LD_RUN_PATH=$(DATADIR)/$(CANONICAL_HOST)/lib
