--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -29,5 +29,9 @@ $(LINK):
 	(cd $(CCLIENTDIR); make $(CCCLIENTOSTYPE))
 
 
+clean: stdclean
+
+.PHONY: clean
+
 include ../../makerules
 include .depend
