--- a/src/wx/Makefile2
+++ b/src/wx/Makefile2
@@ -13,6 +13,10 @@ TARGETS = $(SRC:.cpp=.o)
 
 all: $(TARGETS)
 
+clean: stdclean
+
+.PHONY: clean all
+
 include ../../makeopts
 include ../../makerules
 include .depend
