--- a/src/Python/.cvsignore
+++ b/src/Python/.cvsignore
@@ -1,17 +1,24 @@
 .depend
-MString.py
-MProfile.py
-MObject.py
-MAppBase_wrap.doc
-MailFolder_wrap.doc
-Profile_wrap.doc
-String_wrap.doc
-MObject.cpp
-Message_wrap.doc
-MObject_wrap.doc
-MObject_swig.cpp
-String_swig.cpp
-Profile_swig.cpp
-Message_swig.cpp
-MailFolder_swig.cpp
 MAppBase_swig.cpp
+MAppBase_wrap.doc
+MAppBase_wrap.html
+MObject.cpp
+MObject.py
+MObject_swig.cpp
+MObject_wrap.doc
+MObject_wrap.html
+MProfile.py
+MString.py
+MString_wrap.html
+MailFolder_swig.cpp
+MailFolder_wrap.doc
+MailFolder_wrap.html
+Message_swig.cpp
+Message_wrap.doc
+Message_wrap.html
+Profile_swig.cpp
+Profile_wrap.doc
+Profile_wrap.html
+String_swig.cpp
+String_wrap.doc
+junk
