moved upgrade.cpp around tried to create a test routine for mail setup - still broken tried to autocollect mail addresses - doesn't work, needs adb docs

--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -2,7 +2,7 @@
 
 CWD = classes
 SRC = MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp \
-      XFace.cpp kbList.cpp upgrade.cpp MFolder.cpp
+      XFace.cpp kbList.cpp MFolder.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 
