--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -1,14 +1,13 @@
-# Makefile for src/mail directory
+# Makefile for src/util directory
 
 CWD = util
-SRC = strutil.cpp #locks.cpp
-CSRC = #pyembed0.c pyembed1.c pyembed2.c pyembed3.c pyembed4.c
+SRC = strutil.cpp upgrade.cpp
+CSRC =
 HDR = $(SRC:.cpp=.h) $(CSRC:.c=.h)
 
 TARGETS = $(SRC:.cpp=.o) $(CSRC:.c=.o)
 
 all:	$(TARGETS)
-strutil.o: strutil.cpp
 
 clean: stdclean
 
