--- a/.cvsignore
+++ b/.cvsignore
@@ -1,3 +1,4 @@
+M.spec
 config.cache
 config.log
 config.status
@@ -11,3 +12,4 @@ nohup.out
 out
 solaris2.5.system.cache
 solaris2.5.system.cache.tmp
+tmp
