--- a/makeopts.in
+++ b/makeopts.in
@@ -36,6 +36,8 @@ DOCTEX=@DOCTEX@
 LATEX=@LATEX@
 DVIPS=@DVIPS@
 LATEX2HTML=@LATEX2HTML@ -local_icons
+XGETTEXT=@XGETTEXT@
+MSGFMT=@MSGFMT@
 
 # compiler stuff
 CC = @CC@
