--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,5 @@
 dnl $Id$
+dnl Process this file with autoconf to produce a configure script.
 
 dnl ######################## Here the actual script begins ###############
 
