--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1,9 +1,9 @@
 /*-*- c++ -*-********************************************************
  * config.h.in: config.h template file for use with autoconf        *
  *                                                                  *
- * (C) 1998 by Karsten Ballüder (Ballueder@usa.net)                 *
+ * (C) 1998,1999 by Karsten Ballüder (Ballueder@usa.net)            *
  *                                                                  *
- * $Id$           *
+ * $Id$
  *******************************************************************/
 /// @package M
 /// @author Karsten Ballüder (Ballueder@usa.net)
@@ -98,4 +98,8 @@
 /** Define if you want to use the global Mpch.h header file (e.g. for
     precompiling headers */
 #undef USE_PCH
+/** This define carries some information about the operating system
+    and release that M is compiled for.
+*/
+#define M_OSINFO   "unknownOS"
 //@}
