--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -1,13 +1,20 @@
 # Makefile for src/classes directory
 # $Id$
 
+include ../../makeopts
+
 CWD = classes
 SRC = MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp \
       XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp
+
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 
 TARGETS = $(SRC:.cpp=.o)
+
+ifdef EXPERIMENTAL
+TARGETS += Filters.o
+endif
 
 all: $(TARGETS)
 
@@ -17,7 +24,6 @@ clean: stdclean
 
 .PHONY: clean
 
-include ../../makeopts
 include ../../makerules
 include .depend
 
