"make mergecat" fix attempt

--- a/locale/Makefile
+++ b/locale/Makefile
@@ -33,7 +33,7 @@ install:
 mergecat:
 	$(MAKE) -C .. msgcat
 	cp ../messages.po messages_po
-	msgmerge messages_po extra_po -o tmp.po && mv tmp.po message_po
+	msgmerge messages_po extra_po -o tmp.po && cat tmp.po | sed "1,$$ s/^#~ //g" <tmp.po > tmp && mv tmp message_po
 	for i in $(FILES_PO); do msgmerge $$i messages_po -o tmp.po && mv tmp.po $$i; done
 
 .PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files
