Major changes in mail compose/folder/viewer codes required to solve some bugs. This needs some more testing I suppose.

--- a/src/Python/Makefile2
+++ b/src/Python/Makefile2
@@ -9,7 +9,7 @@
 
 CWD = Python
 
-SWIGSRC = MAppBase.i MailFolder.i MString.i Profile.i Message.i MObject.i
+SWIGSRC = MAppBase.i MailFolder.i MString.i Profile.i Message.i MObject.i #SendMessageCC.i
 CPPSRC = InitPython.cpp PythonHelp.cpp
 SRC=$(CXXSRC) *.cpp
 
