Separated out adb collection code, made messageview collect reply-to and from addresses. Will add it to composeview, too, soon.

--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -2,7 +2,7 @@
 # $Id$
 
 CWD = util
-SRC = strutil.cpp sysutil.cpp upgrade.cpp 
+SRC = strutil.cpp sysutil.cpp upgrade.cpp miscutil.cpp
 CSRC =
 HDR = $(SRC:.cpp=.h) $(CSRC:.c=.h)
 
