--- a/configure.in
+++ b/configure.in
@@ -436,6 +436,10 @@ dnl they are not installed, the test for wx_gtk will fail anyway.
 
 AC_CHECK_LIB(wx_gtk2,main,,AC_MSG_ERROR("wx_gtk library is required."),$GTK_LDFLAGS)
 
+
+AC_CHECK_LIB(png,main,LIB_PNG="-lpng",AC_MSG_WARN("PNG library not available linking might fail."))
+AC_CHECK_LIB(jpeg,main,LIB_JPEG="-ljpeg",AC_MSG_WARN("JPEG library not available linking might fail."))
+
 dnl --------------------------------------------------------------------------
 dnl c-client library: set the proper OSTYPE and compiler variables
 dnl --------------------------------------------------------------------------
@@ -555,7 +559,7 @@ dnl compface is included in M source
 LIBS="$LIBS -lcompface"
 
 dnl add other flags
-LIBS="$LIBS $PYTHON_LIBS $GTK_LDFLAGS $LIB_EFENCE $LIB_DMALLOC"
+LIBS="$LIBS $PYTHON_LIBS $GTK_LDFLAGS $LIB_EFENCE $LIB_DMALLOC $LIB_PNG $LIB_JPEG"
 CXXFLAGS="$CXXFLAGS $DBGFLAGS"
 CFLAGS="$CFLAGS $DBGFLAGS"
 
