Some more fixes.

--- a/extra/install/Makefile
+++ b/extra/install/Makefile
@@ -17,7 +17,7 @@ install:
 	$(INSTALL) -d $(DATADIR)/afm
 	$(INSTALL_DATA) afm/*.afm $(DATADIR)/afm
 	$(INSTALL_DATA) newmail.wav $(DATADIR)
-	$(INSTALL_DATA) mailcap $(DATADIR)
+#	$(INSTALL_DATA) mailcap $(DATADIR)
 
 clean:
 
