--- a/configure.in
+++ b/configure.in
@@ -436,8 +436,9 @@ dnl they are not installed, the test for wx_gtk will fail anyway.
 
 AC_CHECK_LIB(wx_gtk2,main,,AC_MSG_ERROR("wx_gtk library is required."),$GTK_LDFLAGS)
 
-
-AC_CHECK_LIB(png,main,LIB_PNG="-lpng",AC_MSG_WARN("PNG library not available linking might fail."))
+dnl png library not required as it is included in wxGTK
+LIB_PNG=
+#AC_CHECK_LIB(png,main,LIB_PNG="-lpng",AC_MSG_WARN("PNG library not available linking might fail."))
 AC_CHECK_LIB(jpeg,main,LIB_JPEG="-ljpeg",AC_MSG_WARN("JPEG library not available linking might fail."))
 
 dnl --------------------------------------------------------------------------
